--- a/.github/workflows/POI-CI-dotnet-core.yml
+++ b/.github/workflows/POI-CI-dotnet-core.yml
@@ -26,6 +26,6 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build --configuration Release --no-restore apis/poi/**/*.csproj
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test --no-restore --verbosity normal apis/poi/tests/UnitTests
